--- a/Projects/Platform/Platform.vcxproj
+++ b/Projects/Platform/Platform.vcxproj
@@ -165,12 +165,11 @@
     <ClInclude Include="..\..\include\Platform\Base\BitFlags.h" />
     <ClInclude Include="..\..\include\Platform\Base\IBuffer.h" />
     <ClInclude Include="..\..\include\Platform\Base\IGraphics.h" />
+    <ClInclude Include="..\..\include\Platform\Base\IModule.h" />
     <ClInclude Include="..\..\include\Platform\Base\INetwork.h" />
     <ClInclude Include="..\..\include\Platform\Base\IRenderer.h" />
     <ClInclude Include="..\..\include\Platform\Base\IResource.h" />
     <ClInclude Include="..\..\include\Platform\Base\IShader.h" />
-    <ClInclude Include="..\..\include\Platform\Base\ISystem.h" />
-    <ClInclude Include="..\..\include\Platform\Base\IWindow.h" />
     <ClInclude Include="..\..\include\Platform\Base\Logger.h" />
     <ClInclude Include="..\..\include\Platform\Base\RefObject.h" />
     <ClInclude Include="..\..\include\Platform\Base\Result.h" />
@@ -179,12 +178,12 @@
     <ClInclude Include="..\..\include\Platform\Config.h" />
     <ClInclude Include="..\..\include\Platform\DesignPattern\Factory.h" />
     <ClInclude Include="..\..\include\Platform\DesignPattern\Singleton.h" />
+    <ClInclude Include="..\..\include\Platform\Detection.h" />
     <ClInclude Include="..\..\include\Platform\IO\DllLoader.h" />
     <ClInclude Include="..\..\include\Platform\IO\FileStream.h" />
     <ClInclude Include="..\..\include\Platform\IO\Path.h" />
     <ClInclude Include="..\..\include\Platform\IO\PathHelper.h" />
     <ClInclude Include="..\..\include\Platform\IO\Stream.h" />
-    <ClInclude Include="..\..\include\Platform\Module\Module.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\Platform\Base\Logger.cpp" />
