--- a/Projects/Core/Core.vcxproj.filters
+++ b/Projects/Core/Core.vcxproj.filters
@@ -19,9 +19,6 @@
     <Filter Include="ヘッダー ファイル\Json">
       <UniqueIdentifier>{5c3fb115-37c7-4c98-9794-f3f486b84f12}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ヘッダー ファイル\Module">
-      <UniqueIdentifier>{442e4776-99bf-46fb-be4c-9d293a28c6c8}</UniqueIdentifier>
-    </Filter>
     <Filter Include="ソース ファイル\Allocator">
       <UniqueIdentifier>{9fd8810c-5a50-4889-9780-a63936ef68d5}</UniqueIdentifier>
     </Filter>
@@ -40,17 +37,11 @@
     <Filter Include="ヘッダー ファイル\System">
       <UniqueIdentifier>{5d16dee3-afa7-410b-8659-de5a5a3ff450}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ソース ファイル\Module">
-      <UniqueIdentifier>{79c28b2d-4c2f-47f4-beca-31bae8ee4f20}</UniqueIdentifier>
-    </Filter>
     <Filter Include="ソース ファイル\Thread">
       <UniqueIdentifier>{f05ec238-c380-42d8-87cb-c24830196c81}</UniqueIdentifier>
     </Filter>
     <Filter Include="ヘッダー ファイル\Types">
       <UniqueIdentifier>{ea39f2bb-cd68-4d2d-b4dc-7cf65b845f9c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ヘッダー ファイル\Types\Math">
-      <UniqueIdentifier>{f76d70ff-421d-4f57-b110-e14325cfdad2}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -78,17 +69,8 @@
     <ClInclude Include="..\..\include\Core\Time\Time.h">
       <Filter>ヘッダー ファイル\Time</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\Core\System\System.h">
-      <Filter>ヘッダー ファイル\System</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\include\Core.h">
       <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\include\Core\Network\NetworkModule.h">
-      <Filter>ヘッダー ファイル\Module</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\include\Core\Graphics\GraphicsModule.h">
-      <Filter>ヘッダー ファイル\Module</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\Core\Task\Task.h">
       <Filter>ヘッダー ファイル\Task</Filter>
@@ -96,31 +78,31 @@
     <ClInclude Include="Config.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\Core\System\ISystemModule.h">
-      <Filter>ヘッダー ファイル\Module</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\include\Core\Type\Color.h">
       <Filter>ヘッダー ファイル\Types</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\Core\System\Window.h">
+      <Filter>ヘッダー ファイル\System</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\include\Core\Types\Math.h">
-      <Filter>ヘッダー ファイル\Types\Math</Filter>
+      <Filter>ヘッダー ファイル\Types</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\Core\Types\Matrix.h">
-      <Filter>ヘッダー ファイル\Types\Math</Filter>
+      <Filter>ヘッダー ファイル\Types</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\Core\Types\Quaternion.h">
-      <Filter>ヘッダー ファイル\Types\Math</Filter>
+      <Filter>ヘッダー ファイル\Types</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\Core\Types\Vector2.h">
-      <Filter>ヘッダー ファイル\Types\Math</Filter>
+      <Filter>ヘッダー ファイル\Types</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\Core\Types\Vector3.h">
-      <Filter>ヘッダー ファイル\Types\Math</Filter>
+      <Filter>ヘッダー ファイル\Types</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\Core\Types\Vector4.h">
-      <Filter>ヘッダー ファイル\Types\Math</Filter>
+      <Filter>ヘッダー ファイル\Types</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\Core\System\Window.h">
+    <ClInclude Include="..\..\include\Core\System\ICoreDevice.h">
       <Filter>ヘッダー ファイル\System</Filter>
     </ClInclude>
   </ItemGroup>
@@ -137,26 +119,17 @@
     <ClCompile Include="..\..\src\Core\Allocator\StackAllocator.cpp">
       <Filter>ソース ファイル\Allocator</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\Core\System\System.cpp">
-      <Filter>ソース ファイル\System</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\Core\Graphics\GraphicsModule.cpp">
-      <Filter>ソース ファイル\Module</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\Core\Network\NetworkModule.cpp">
-      <Filter>ソース ファイル\Module</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\Core\Thread\Thread.cpp">
       <Filter>ソース ファイル\Thread</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\Core\Task\Task.cpp">
       <Filter>ソース ファイル\Thread</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\Core\System\ISystemModule.cpp">
-      <Filter>ソース ファイル\Module</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\Core\System\Window.cpp">
       <Filter>ソース ファイル\System</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Core\Graphics\GraphicsModule.cpp">
+      <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
