--- a/Projects/Core/Core.vcxproj
+++ b/Projects/Core/Core.vcxproj
@@ -165,7 +165,10 @@
     <ClInclude Include="..\..\include\Core\Allocator\PoolAllocator.h" />
     <ClInclude Include="..\..\include\Core\Allocator\StackAllocator.h" />
     <ClInclude Include="..\..\include\Core\Json\Json.h" />
+    <ClInclude Include="..\..\include\Core\Resource\ResourceManager.h" />
     <ClInclude Include="..\..\include\Core\System\ICoreDevice.h" />
+    <ClInclude Include="..\..\include\Core\System\IModule.h" />
+    <ClInclude Include="..\..\include\Core\System\RendererModule.h" />
     <ClInclude Include="..\..\include\Core\System\Window.h" />
     <ClInclude Include="..\..\include\Core\Task\Task.h" />
     <ClInclude Include="..\..\include\Core\Thread\Thread.h" />
@@ -184,7 +187,8 @@
     <ClCompile Include="..\..\src\Core\Allocator\LinerAllocator.cpp" />
     <ClCompile Include="..\..\src\Core\Allocator\PoolAllocator.cpp" />
     <ClCompile Include="..\..\src\Core\Allocator\StackAllocator.cpp" />
-    <ClCompile Include="..\..\src\Core\Graphics\GraphicsModule.cpp" />
+    <ClCompile Include="..\..\src\Core\System\IModule.cpp" />
+    <ClCompile Include="..\..\src\Core\System\RendererModule.cpp" />
     <ClCompile Include="..\..\src\Core\System\Window.cpp" />
     <ClCompile Include="..\..\src\Core\Task\Task.cpp" />
     <ClCompile Include="..\..\src\Core\Thread\Thread.cpp" />
