--- a/Projects/DirectX11/DirectX11.vcxproj.filters
+++ b/Projects/DirectX11/DirectX11.vcxproj.filters
@@ -21,6 +21,12 @@
     <ClInclude Include="..\..\include\Thirdparty\Graphics\DirectX11\DirectX11.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\Thirdparty\Graphics\DirectX11\DeviceContext.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Thirdparty\Graphics\DirectX11\Renderer.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -29,7 +35,10 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\Thirdparty\Graphics\DirectX11\DirectX11.cpp">
+    <ClCompile Include="..\..\src\Thirdparty\Graphics\DirectX11\DeviceContext.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Thirdparty\Graphics\DirectX11\Renderer.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
