--- a/Projects/Platform/Platform.vcxproj
+++ b/Projects/Platform/Platform.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="..\..\include\Platform\Base\BitFlags.h" />
     <ClInclude Include="..\..\include\Platform\Base\INetwork.h" />
     <ClInclude Include="..\..\include\Platform\Base\IRenderer.h" />
+    <ClInclude Include="..\..\include\Platform\Base\IResource.h" />
     <ClInclude Include="..\..\include\Platform\Base\Logger.h" />
     <ClInclude Include="..\..\include\Platform\Base\RefObject.h" />
     <ClInclude Include="..\..\include\Platform\Base\Result.h" />
@@ -181,6 +182,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\Platform\Base\IRenderer.cpp" />
+    <ClCompile Include="..\..\src\Platform\Base\IResource.cpp" />
     <ClCompile Include="..\..\src\Platform\Base\Logger.cpp" />
     <ClCompile Include="..\..\src\Platform\Base\RefObject.cpp" />
     <ClCompile Include="..\..\src\Platform\Base\String.cpp" />
